Fix for valign of shadow DOM components

--- a/src/components/common/_alignment-with-shadow-dom.scss
+++ b/src/components/common/_alignment-with-shadow-dom.scss
@@ -21,19 +21,19 @@
 
 /// Helper mixin to ease vertical alignment of shadow DOM components
 @mixin valign-with-shadow-DOM() {
-  &[align="top"] {
+  &[valign="top"] {
     > ::part(valign) {
       align-items: flex-start;
     }
   }
 
-  &[align="center"] {
+  &[valign="middle"] {
     > ::part(valign) {
       align-items: center;
     }
   }
 
-  &[align="right"] {
+  &[valign="bottom"] {
     > ::part(valign) {
       align-items: flex-end;
     }
